Set up tracing log output in verbose mode

--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -23,3 +23,5 @@ ssstar = {version = "0.1.0", path = "../ssstar" }
 clap = {version = "3.2.16", features = ["derive"]}
 url = "2.2.2"
 byte-unit = "4.0.14"
+tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "local-time"] }
+tracing = "0.1.36"
