Initial structure of lib crate API
This is just a rough outline and very little implementation, but it's
starting to fall into place.

--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -19,7 +19,7 @@ path = "src/main.rs"
 name = "ssstar"
 
 [dependencies]
-ssstar = {version = "0.1.0", path = "../ssstar" }
+ssstar = {version = "0.1.0", path = "../ssstar", features = ["clap"] }
 clap = {version = "3.2.16", features = ["derive"]}
 url = "2.2.2"
 byte-unit = "4.0.14"
