--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -27,3 +27,4 @@ tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "loc
 tracing = "0.1.36"
 tokio = { version = "1.20.1", features = ["full"] }
 color-eyre = "0.6.2"
+futures = "0.3.21"
