--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -29,6 +29,7 @@ aws-sdk-s3 = "0.17.0"
 aws-smithy-http = "0.47.0"
 byte-unit = { version = "4" }
 clap = {version = "3.2.16", features = ["derive"], optional  = true}
+futures = "0.3.21"
 glob = "0.3.0"
 http = "0.2.8"
 once_cell = "1.13.0"
