--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -28,6 +28,7 @@ aws-config = "0.47.0"
 aws-sdk-s3 = "0.17.0"
 aws-smithy-http = "0.47.0"
 byte-unit = { version = "4" }
+chrono = "0.4.22"
 clap = {version = "3.2.16", features = ["derive"], optional  = true}
 futures = "0.3.21"
 glob = "0.3.0"
@@ -35,5 +36,6 @@ http = "0.2.8"
 once_cell = "1.13.0"
 snafu = { version = "0.7.1", features = ["futures"] }
 tar = "0.4.38"
+tokio = { version = "1.20.1", features = ["full"] }
 tracing = "0.1.36"
 url = "2.2.2"
