--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -28,9 +28,11 @@ aws-config = "0.47.0"
 aws-sdk-s3 = "0.17.0"
 aws-smithy-http = "0.47.0"
 aws-smithy-types-convert = { version = "0.47.0", features = ["convert-chrono"] }
+aws-types = "0.47.0"
 byte-unit = { version = "4" }
 chrono = "0.4.22"
 clap = {version = "3.2.16", features = ["derive"], optional  = true}
+dyn-clone = "1.0.9"
 futures = "0.3.21"
 glob = "0.3.0"
 http = "0.2.8"
