--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -36,6 +36,7 @@ dyn-clone = "1.0.9"
 futures = "0.3.21"
 glob = "0.3.0"
 http = "0.2.8"
+itertools = "0.10.3"
 once_cell = "1.13.0"
 snafu = { version = "0.7.1", features = ["futures"] }
 tar = "0.4.38"
