--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -43,3 +43,6 @@ tar = "0.4.38"
 tokio = { version = "1.20.1", features = ["full"] }
 tracing = "0.1.36"
 url = "2.2.2"
+
+[dev-dependencies]
+rand = "0.8.5"
