--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -41,6 +41,7 @@ once_cell = "1.13.0"
 snafu = { version = "0.7.1", features = ["futures"] }
 tar = "0.4.38"
 tokio = { version = "1.20.1", features = ["full"] }
+tokio-util = { version = "0.7.3", features = ["io", "io-util"] }
 tracing = "0.1.36"
 url = "2.2.2"
 
