--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -30,6 +30,7 @@ aws-smithy-http = "0.47.0"
 aws-smithy-types-convert = { version = "0.47.0", features = ["convert-chrono"] }
 aws-types = "0.47.0"
 byte-unit = { version = "4" }
+bytes = "1.2.1"
 chrono = "0.4.22"
 clap = {version = "3.2.16", features = ["derive"], optional  = true}
 dyn-clone = "1.0.9"
@@ -41,6 +42,7 @@ once_cell = "1.13.0"
 snafu = { version = "0.7.1", features = ["futures"] }
 tar = "0.4.38"
 tokio = { version = "1.20.1", features = ["full"] }
+tokio-stream = "0.1.9"
 tokio-util = { version = "0.7.3", features = ["io", "io-util"] }
 tracing = "0.1.36"
 url = "2.2.2"
