--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -30,6 +30,7 @@ futures = "0.3.23"
 http = "0.2.8"
 once_cell = "1.13.1"
 rand = "0.8.5"
+regex = "1.6.0"
 strum = { version = "0.24.1", features = ["derive"] }
 tar = "0.4.38"
 tempdir = "0.3.7"
