--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -21,9 +21,11 @@ license = "Apache-2.0 OR MIT"
 again = "0.1.2"
 aws-config = "0.47.0"
 aws-sdk-s3 = { version = "0.17.0" }
+base64 = "0.13.0"
 byte-unit = "4.0.14"
 bytes = "1.2.1"
 color-eyre = "0.6.2"
+digest = "0.10.3"
 dirs = "4.0.0"
 duct = "0.13.5"
 futures = "0.3.23"
@@ -31,6 +33,7 @@ http = "0.2.8"
 once_cell = "1.13.1"
 rand = "0.8.5"
 regex = "1.6.0"
+sha2 = "0.10.2"
 strum = { version = "0.24.1", features = ["derive"] }
 tar = "0.4.38"
 tempdir = "0.3.7"
@@ -40,6 +43,7 @@ tracing = "0.1.36"
 tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.15"
 tracing-test = "0.2.3"
+typenum = "1.15.0"
 url = "2.2.2"
 walkdir = "2.3.2"
 which = "4.2.5"
