--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -55,6 +55,8 @@ strum = { version = "0.24.1", features = ["derive"] }
 assert_matches = "1.5.0"
 more-asserts = "0.3.0"
 tempdir = "0.3.7"
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
 
 [build-dependencies]
 vergen = "7.4.0"
