--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -118,4 +118,8 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: publish
-          args: --token ${{ secrets.CARGO_API_KEY }}
+          args: --token ${{ secrets.CARGO_API_KEY }} -p ssstar
+      - uses: actions-rs/cargo@v1
+        with:
+          command: publish
+          args: --token ${{ secrets.CARGO_API_KEY }} -p ssstar-cli
