--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           cd $HOME/.local/bin
           wget https://dl.min.io/server/minio/release/darwin-amd64/minio
           chmod +x minio
-          echo ::add-path::$HOME/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Run local tests
         uses: actions-rs/cargo@v1
         with:
@@ -140,7 +140,7 @@ jobs:
           cd $HOME/.local/bin
           wget https://dl.min.io/server/minio/release/darwin-amd64/minio
           chmod +x minio
-          echo ::add-path::$HOME/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
