Try again to fix the minio tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
         run: |
           mkdir -p $HOME/.local/bin
           cd $HOME/.local/bin
-          wget https://dl.min.io/server/minio/release/darwin-amd64/minio
+          wget https://dl.min.io/server/minio/release/linux-amd64/minio
           chmod +x minio
+          mv minio $HOME/.local/bin
           echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Run local tests
         uses: actions-rs/cargo@v1
@@ -138,8 +139,9 @@ jobs:
         run: |
           mkdir -p $HOME/.local/bin
           cd $HOME/.local/bin
-          wget https://dl.min.io/server/minio/release/darwin-amd64/minio
+          wget https://dl.min.io/server/minio/release/linux-amd64/minio
           chmod +x minio
+          mv minio $HOME/.local/bin
           echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
