--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features --workspace --ignored
+          args: --all-features --workspace -- --ignored
 
   rustfmt:
     name: Rustfmt
