--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # TODO: Just for troubleshooting
+      RUST_LOG: h2=warn,hyper=info,rustls=info,aws=debug,debug
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
