--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          args: '--all-features --workspace --ignore-tests --out Lcov'
+          args: '--all-features --workspace --ignore-tests --ignored --out Lcov'
       - name: Upload to Coveralls
         # upload only if push
         if: ${{ github.event_name == 'push' }}
