--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,23 @@ jobs:
     - uses: actions/checkout@v2
     - uses: EmbarkStudios/cargo-deny-action@v1
 
+  cargo-udeps:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install cargo-udeps
+      shell: bash
+      run: |
+        wget  \
+          --output-file cargo-udeps.tar.gz \
+          --tries=10 --retry-connrefused \
+          https://github.com/est31/cargo-udeps/releases/download/v0.1.32/cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz
+        tar xvzf  cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz --strip-components=1
+
+    - name: Check for unused dependencies
+      shell: bash
+      run: |
+        cargo udeps
+
   rustfmt:
     name: Rustfmt
     runs-on: ubuntu-latest
