Attempt to fix cargo udeps step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,19 +16,26 @@ jobs:
   cargo-udeps:
     runs-on: ubuntu-latest
     steps:
-    - name: Install cargo-udeps
-      shell: bash
-      run: |
-        wget  \
-          --output-file cargo-udeps.tar.gz \
-          --tries=10 --retry-connrefused \
-          https://github.com/est31/cargo-udeps/releases/download/v0.1.32/cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz
-        tar xvzf  cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz --strip-components=1
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+      - name: Install cargo-udeps
+        shell: bash
+        run: |
+          wget  \
+            --output-file cargo-udeps.tar.gz \
+            --tries=10 --retry-connrefused \
+            https://github.com/est31/cargo-udeps/releases/download/v0.1.32/cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz
+          tar xvzf  cargo-udeps-v0.1.32-x86_64-unknown-linux-gnu.tar.gz --strip-components=1
+          mv cargo-udeps $HOME/.cargo/bin/
 
-    - name: Check for unused dependencies
-      shell: bash
-      run: |
-        cargo udeps
+      - name: Check for unused dependencies
+        shell: bash
+        run: |
+          cargo udeps
 
   rustfmt:
     name: Rustfmt
