Ignore Rust security advisories that don't concern us

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Check for unused dependencies
       shell: bash
       run: |
-        cargo udeps
+        cargo +nightly udeps
 
   rustfmt:
     name: Rustfmt
