--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar"
-version = "0.1.0"
+version = "0.1.0-dev"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
@@ -24,6 +24,10 @@ maintenance = { status = "actively-developed" }
 # Make the `config` struct a valid `clap` `Parser` impl so the config can be populated from the command line
 # This obvviously requires taking a dependency on `clap` so it should only be enabled in a CLI that is using clap
 clap = ["dep:clap"]
+
+[package.metadata.release]
+# All crates share the same version and should be incremented together
+shared-version = true
 
 [dependencies]
 async-trait = "0.1.57"
@@ -51,7 +55,7 @@ tracing = "0.1.36"
 url = "2.2.2"
 
 [dev-dependencies]
-ssstar-testing = { version = "0.1.0", path = "../ssstar-testing" }
+ssstar-testing = { version = "0.1.0-dev", path = "../ssstar-testing" }
 color-eyre = "0.6.2"
 rand = "0.8.5"
 strum = { version = "0.24.1", features = ["derive"] }
