(cargo-release) version 0.1.0

--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar-cli"
-version = "0.1.0-dev"
+version = "0.1.0"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
