--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar-cli"
-version = "0.1.2-dev"
+version = "0.1.2"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
@@ -26,7 +26,7 @@ path = "src/main.rs"
 name = "ssstar"
 
 [dependencies]
-ssstar = {version = "0.1.2-dev", path = "../ssstar", features = ["clap"] }
+ssstar = {version = "0.1.2", path = "../ssstar", features = ["clap"] }
 clap = {version = "3.2.16", features = ["derive"]}
 url = "2.2.2"
 byte-unit = "4.0.14"
