Set the README for `ssstar` and `ssstar-cli`

--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/elastio/ssstar"
 keywords = ["tar", "s3", "archive"]
 categories = ["command-line-utilities", "filesystem"]
 license = "Apache-2.0 OR MIT"
+readme = "../README.md"
 
 [badges]
 maintenance = { status = "actively-developed" }
