Try to fix static build by installing MUSL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,9 @@ jobs:
         with:
           profile: minimal
           target: x86_64-unknown-linux-musl
+      - name: Install MUSL deps
+        run: |
+          sudo apt-get install musl musl-dev
       - uses: Swatinem/rust-cache@v1
       - name: Cargo build
         uses: actions-rs/cargo@v1
