--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.job.target }}
+          target: ${{ matrix.job.target }}
       - uses: Swatinem/rust-cache@v1
       - name: Install Ubuntu MUSL deps
         run: |
