--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  publish:
+  publish-binaries:
     name: Publishing for ${{ matrix.job.os }}
     runs-on: ${{ matrix.job.os }}
     strategy:
@@ -106,6 +106,38 @@ jobs:
           files: |
             target/${{ matrix.job.target }}/release/ssstar-*.tar.gz
             target/${{ matrix.job.target }}/release/ssstar-*.sha256
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: startsWith(github.ref, 'refs/tags/v')
+
+
+  publish-docker:
+    needs: clippy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Get ssstar version
+        shell: bash
+        run: |
+          # Tag the docker image with the full semver, major.minor, and major
+          version=$(cargo metadata --format-version 1 --manifest-path ssstar-cli/Cargo.toml \
+            | jq -r ".packages[]|select(.name == \"ssstar-cli\")|.version")
+          major_minor=$(echo $version | sed -r 's/([0-9]+\.[0-9]+).*$/\1/')
+          major=$(echo $version | sed -r 's/([0-9]+)\.[0-9]+.*$/\1/')
+
+          docker build . \
+            --tag ssstar:latest \
+            --tag ghcr.io/elastio/ssstar:latest \
+            --tag ghcr.io/elastio/ssstar:$version \
+            --tag ghcr.io/elastio/ssstar:$major_minor \
+            --tag ghcr.io/elastio/ssstar:$major
+
+          docker images
+      - name: Publish to GitHub Container Registry
+        run: |
+          echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
+          docker push --all-tags ghcr.io/elastio/ssstar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: startsWith(github.ref, 'refs/tags/v')
