Add average transfer rate to final progress report and tweak bars
A bug report from QA indicated that the speed with which the `extract`
operation was writing to S3 was poor; around 35MiB/s.  That doesn't make
sense, as the same code is used for writing archives in `create` and
writing extracted objects in `extract`.

I suspect the actual problem is that the bytes per second reported by
`indicatif` are very primitive.  They are instantaneous transfer rate
based on the number of bytes added since the last update divided by time
elapsed.  That's not a meaningful number, what we really care about is
the average transfer rate over time.

So I've modified the progress callback trait (warning: breaking change),
and the CLI, to report bytes per second at the end of completed
operations.

In my own testing on an `m6a.2xlarge` instance with a 100GB tar archive
containing 50 files, I got the following results:

```text
$ ssstar extract --s3 s3://tar-file98gb/file s3://anelson-ssstar-test/foo/
Extraction complete!  Read 50 objects (97.66 GiB) from archive in 8 minutes (211.27 MiB/s)
Extracted 50 objects (97.66 GiB)
Skipped 0 objects (0B)
Upload complete!  Uploaded 50 objects (97.66 GiB) in 8 minutes (211.22 MiB/s)
```

This is close to the maximum network transfer speed for the
`m6a.2xlarge` instance type.

I've also removed the useless instantenous bytes per second output from
the progress bars, and changed the sizing of the progress lines to make
more room for message text.

Target of Opportunity Changes
===

These aren't directly related to the progress issue but I made them as
targets of opportunity:

* Correct trivial typo in README
* Improve the doc comments for the Rust crates
* Add some helper scripts to make it easier to test ssstar in AWS

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -116,7 +116,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Get ssstar version
+      - name: Build docker image
         shell: bash
         run: |
           # Tag the docker image with the full semver, major.minor, and major
