--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar"
-version = "0.1.4-dev"
+version = "0.2.0"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
@@ -56,7 +56,7 @@ tracing = "0.1.36"
 url = "2.2.2"
 
 [dev-dependencies]
-ssstar-testing = { version = "0.1.4-dev", path = "../ssstar-testing" }
+ssstar-testing = { version = "0.2.0", path = "../ssstar-testing" }
 color-eyre = "0.6.2"
 rand = "0.8.5"
 strum = { version = "0.24.1", features = ["derive"] }
