--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar-testing"
-version = "0.3.1-dev"
+version = "0.4.0"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
