--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -31,27 +31,28 @@ clap = ["dep:clap"]
 shared-version = true
 
 [dependencies]
-async-trait = "0.1.57"
-aws-config = "0.52.0"
-aws-sdk-s3 = { version = "0.22.0", features = ["rt-tokio"] }
-aws-smithy-http = "0.52.0"
-aws-smithy-types-convert = { version = "0.52.0", features = ["convert-chrono"] }
-aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
+async-trait = "0.1.64"
+aws-config = "0.54.1"
+aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
+aws-sdk-s3 = { version = "0.24.0", features = ["rt-tokio"] }
+aws-smithy-http = "0.54.3"
+aws-smithy-types-convert = { version = "0.54.3", features = ["convert-chrono"] }
+aws-types = { version = "0.54.1", features = [] }
 byte-unit = { version = "4" }
-bytes = "1.2.1"
+bytes = "1.4.0"
 chrono = "0.4.22"
-clap = { version = "4.0.32", features = ["derive"], optional = true }
+clap = { version = "4.1.6", features = ["derive"], optional = true }
 dyn-clone = "1.0.9"
-futures = "0.3.24"
+futures = "0.3.26"
 glob = "0.3.0"
 http = "0.2.8"
 itertools = "0.10.5"
-once_cell = "1.15.0"
+once_cell = "1.17.1"
 snafu = { version = "0.7.1", features = ["futures"] }
 tar = "0.4.38"
-tokio = { version = "1.21.2", features = ["full"] }
+tokio = { version = "1.25.0", features = ["full"] }
 tokio-stream = "0.1.10"
-tokio-util = { version = "0.7.4", features = ["io", "io-util"] }
+tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
 tracing = "0.1.36"
 url = "2.3.0"
 
@@ -67,4 +68,4 @@ dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
 
 [build-dependencies]
-vergen = "7.4.2"
+vergen = "7.5.1"
