--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -25,7 +25,8 @@ shared-version = true
 [dependencies]
 again = "0.1.2"
 aws-config = "0.54.1"
-aws-sdk-s3 = "0.24.0"
+aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
+aws-sdk-s3 = { version = "0.24.0", features = ["rt-tokio"] }
 aws-types = { version = "0.54.1", features = [] }
 base64 = "0.21.0"
 byte-unit = "4.0.14"
@@ -35,7 +36,7 @@ digest = "0.10.3"
 dirs = "4.0.0"
 duct = "0.13.5"
 futures = "0.3.26"
-http = "0.2.8"
+http = "0.2.9"
 once_cell = "1.17.1"
 rand = "0.8.5"
 regex = "1.7.1"
